Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I3241e023c3da29375d7f385d864725c1155762ae

--- a/res/values-eu/strings.xml
+++ b/res/values-eu/strings.xml
@@ -1318,7 +1318,7 @@
     <string name="module_version" msgid="1787518340082046658">"Google Play-ren sistemaren eguneratzea"</string>
     <string name="battery_info" msgid="7873528123969546728">"Bateriari buruzko informazioa"</string>
     <string name="device_info_not_available" msgid="4804474466616712326">"Ez dago erabilgarri"</string>
-    <string name="storage_settings" msgid="7472188817781592677">"Memoria"</string>
+    <string name="storage_settings" msgid="7472188817781592677">"Biltegiratzeko tokia"</string>
     <string name="storage_settings_for_app" msgid="229425418984637483">"Memoria eta cachea"</string>
     <string name="storage_settings_title" msgid="486118156723194815">"Memoriaren ezarpenak"</string>
     <string name="status_eid" msgid="7532406028683438634">"EIDa"</string>
@@ -1538,7 +1538,7 @@
     <string name="network_scorer_change_active_dialog_title" msgid="7005220310238618141">"Wifi-laguntzailea aldatu nahi duzu?"</string>
     <string name="network_scorer_change_active_dialog_text" msgid="7006057749370850706">"Sareko konexioak kudeatzeko <xliff:g id="NEW_APP">%1$s</xliff:g> erabili nahi duzu, <xliff:g id="CURRENT_APP">%2$s</xliff:g> erabili beharrean?"</string>
     <string name="network_scorer_change_active_no_previous_dialog_text" msgid="680685773455072321">"<xliff:g id="NEW_APP">%s</xliff:g> erabili nahi duzu sareko konexioak kudeatzeko?"</string>
-    <string name="location_category_recent_location_requests" msgid="2205900488782832082">"Azken kokapen-eskaerak"</string>
+    <string name="location_category_recent_location_requests" msgid="2205900488782832082">"Azkenaldiko kokapen-eskaerak"</string>
     <string name="managed_profile_location_switch_title" msgid="1265007506385460066">"Laneko profilaren kokapena"</string>
     <string name="location_app_level_permissions" msgid="907206607664629759">"Aplikazioen kokapen-baimenak"</string>
     <string name="location_app_permission_summary_location_off" msgid="2711822936853500335">"Kokapena desaktibatuta dago"</string>
