--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -1987,7 +1987,7 @@
     <string name="accessibility_settings_title" msgid="6739115703615065716">"Paramètres d\'accessibilité"</string>
     <string name="accessibility_settings_summary" msgid="2366627644570558503">"Affichage, interaction, audio"</string>
     <string name="vision_settings_title" msgid="8919983801864103069">"Paramètres visuels"</string>
-    <string name="vision_settings_description" msgid="7614894785054441991">"Vous pouvez personnaliser cet appareil en fonction de vos besoins et modifier ces fonctionnalités d\'accessibilité ultérieurement dans les paramètres."</string>
+    <string name="vision_settings_description" msgid="7614894785054441991">"Vous pouvez personnaliser cet appareil en fonction de vos besoins et modifier ces fonctionnalités d\'accessibilité par la suite dans les paramètres."</string>
     <string name="vision_settings_suggestion_title" msgid="4689275412658803919">"Modifier la taille de la police"</string>
     <string name="screen_reader_category_title" msgid="5825700839731107803">"Lecteur d\'écran"</string>
     <string name="keyboard_category_title" msgid="6841712758039893220">"Options du clavier physique"</string>
@@ -3497,7 +3497,7 @@
     <string name="notification_listener_disable_warning_confirm" msgid="841492108402184976">"Désactiver"</string>
     <string name="notification_listener_disable_warning_cancel" msgid="8802784105045594324">"Annuler"</string>
     <string name="notif_type_ongoing" msgid="135675014223627555">"En temps réel"</string>
-    <string name="notif_type_ongoing_summary" msgid="2348867528527573574">"Communication continue (depuis applications actives, navigation, appels téléphoniques, etc.)"</string>
+    <string name="notif_type_ongoing_summary" msgid="2348867528527573574">"Communication continue depuis : applis actives, navigation, appels téléphoniques, etc."</string>
     <string name="notif_type_conversation" msgid="4383931408641374979">"Conversations"</string>
     <string name="notif_type_conversation_summary" msgid="179142405410217101">"SMS, messages texte et autres communications"</string>
     <string name="notif_type_alerting" msgid="4713073696855718576">"Notifications"</string>
