--- a/res/values-gu/strings.xml
+++ b/res/values-gu/strings.xml
@@ -3354,7 +3354,7 @@
     <string name="work_sync_dialog_yes" msgid="5785488304957707534">"કન્ફર્મ કરો"</string>
     <string name="work_sync_dialog_message" msgid="5066178064994040223">"તમારી ઑફિસની પ્રોફાઇલ તમારી વ્યક્તિગત પ્રોફાઇલ જેનો ઉપયોગ કરે છે એ જ સાઉન્ડનો ઉપયોગ કરશે"</string>
     <string name="configure_notification_settings" msgid="1492820231694314376">"નોટિફિકેશન"</string>
-    <string name="notification_dashboard_summary" msgid="7530169251902320652">"નોટિફિકેશનનો ઇતિહાસ, વાતચીત"</string>
+    <string name="notification_dashboard_summary" msgid="7530169251902320652">"નોટિફિકેશનનો ઇતિહાસ, વાતચીતો"</string>
     <string name="conversation_notifs_category" msgid="2549844862379963273">"વાતચીત"</string>
     <string name="general_notification_header" msgid="3669031068980713359">"મેનેજ કરો"</string>
     <string name="app_notification_field" msgid="3208079070539894909">"ઍપ નોટિફિકેશન"</string>
@@ -3664,7 +3664,7 @@
     <string name="zen_mode_system_list" msgid="2256218792042306434">"ટચ સાઉન્ડ"</string>
     <string name="zen_mode_system_list_first" msgid="8590078626001067855">"ટચ સાઉન્ડ"</string>
     <string name="zen_mode_reminders" msgid="1970224691551417906">"રિમાઇન્ડર"</string>
-    <string name="zen_mode_reminders_summary" msgid="3961627037429412382">"કાર્યો અને રિમાઇન્ડરથી"</string>
+    <string name="zen_mode_reminders_summary" msgid="3961627037429412382">"ટાસ્ક અને રિમાઇન્ડરથી"</string>
     <string name="zen_mode_reminders_list" msgid="3133513621980999858">"રિમાઇન્ડર"</string>
     <string name="zen_mode_reminders_list_first" msgid="1130470396012190814">"રિમાઇન્ડર"</string>
     <string name="zen_mode_events" msgid="7425795679353531794">"કૅલેન્ડર ઇવેન્ટ"</string>
