--- a/res/values-kn/strings.xml
+++ b/res/values-kn/strings.xml
@@ -2487,7 +2487,7 @@
     <string name="battery_missing_message" msgid="400958471814422770">"ಬ್ಯಾಟರಿ ಮೀಟರ್ ರೀಡಿಂಗ್‌ನಲ್ಲಿ ಸಮಸ್ಯೆ ಎದುರಾಗಿದೆ."</string>
     <string name="battery_missing_link_message" msgid="6021565067124898074"></string>
     <string name="battery_missing_link_a11y_message" msgid="3310971406602316323">"ಈ ದೋಷದ ಕುರಿತು ಇನ್ನಷ್ಟು ತಿಳಿದುಕೊಳ್ಳಲು ಟ್ಯಾಪ್ ಮಾಡಿ"</string>
-    <string name="power_screen" msgid="4596900105850963806">"ಪರದೆ"</string>
+    <string name="power_screen" msgid="4596900105850963806">"ಸ್ಕ್ರೀನ್"</string>
     <string name="power_cpu" msgid="1820472721627148746">"CPU"</string>
     <string name="power_flashlight" msgid="8993388636332573202">"ಫ್ಲಾಶ್‌ಲೈಟ್‌"</string>
     <string name="power_camera" msgid="4778315081581293923">"ಕ್ಯಾಮರಾ"</string>
