--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -550,8 +550,8 @@
     <string name="private_space_fingerprint_title" msgid="5989254643211889931">"فتح الجهاز ببصمة الإصبع"</string>
     <string name="private_space_face_title" msgid="3290402865367663079">"فتح الجهاز بالتعرّف على الوجه"</string>
     <string name="private_space_biometric_summary" msgid="4403837276018724581">"انقر لإعداد هذه الميزة."</string>
-    <string name="private_space_fingerprint_unlock_title" msgid="3614016453395789051">"استخدام ميزة \"فتح الجهاز ببصمة الإصبع\" للمساحة الخاصة"</string>
-    <string name="private_space_face_unlock_title" msgid="462248384776453613">"استخدام ميزة \"فتح الجهاز بالتعرّف على الوجه\" للمساحة الخاصة"</string>
+    <string name="private_space_fingerprint_unlock_title" msgid="3614016453395789051">"فتح المساحة الخاصة باستخدام بصمة الإصبع"</string>
+    <string name="private_space_face_unlock_title" msgid="462248384776453613">"فتح المساحة الخاصة باستخدام بصمة الوجه"</string>
     <string name="private_space_category_ways_to_unlock" msgid="4356631225316950046">"طُرق فتح القفل"</string>
     <string name="private_space_screen_lock_summary" msgid="394837965365561070">"نفس قفل شاشة الجهاز"</string>
     <string name="private_space_new_lock_title" msgid="9056139964133004094">"هل تريد اختيار طريقة جديدة لقفل المساحة الخاصة؟"</string>
