--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -3098,7 +3098,7 @@
     <string name="cloned_app_created_summary" msgid="7277912971544890710">"Klónozva"</string>
     <string name="cloned_app_creation_toast_summary" msgid="3854494347144867870">"<xliff:g id="PACKAGE_LABEL">%1$s</xliff:g>-klón létrehozása…"</string>
     <string name="cloned_app_created_toast_summary" msgid="755225403495544163">"<xliff:g id="PACKAGE_LABEL">%1$s</xliff:g>-klón létrehozva"</string>
-    <string name="system_dashboard_summary" msgid="7400745270362833832">"Nyelvek, gesztusok, idő, biztonsági mentés"</string>
+    <string name="system_dashboard_summary" msgid="7400745270362833832">"Nyelvek, kézmozdulatok, idő, biztonsági mentés"</string>
     <string name="languages_setting_summary" msgid="2650807397396180351">"Rendszernyelvek, alkalmazásnyelvek, regionális preferenciák, beszéd"</string>
     <string name="keywords_wifi" msgid="8156528242318351490">"WiFi, Wi-Fi, hálózati kapcsolat, internet, vezeték nélküli, adatok, Wi Fi"</string>
     <string name="keywords_wifi_notify_open_networks" msgid="6580896556389306636">"Wi‑Fi-értesítés, wifi értesítés"</string>
